코드 리펙토링, 정보은닉 안되있는거 추가